welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:1: error: illegal start of simple pattern
for (int k=0 ; !estSurBiscuit() ; k+1){
          ^Program:1: error: '<-' expected but ';' found.
for (int k=0 ; !estSurBiscuit() ; k+1){
             ^Program:1: error: '<-' expected but ';' found.
for (int k=0 ; !estSurBiscuit() ; k+1){
                                ^Program:1: error: '<-' expected but ')' found.
for (int k=0 ; !estSurBiscuit() ; k+1){
                                     ^Program:6: error: illegal start of simple expression
for (int j=0 ; j!=k ; j+1){
             ^Program:6: error: '<-' expected but ';' found.
for (int j=0 ; j!=k ; j+1){
                    ^Program:6: error: '<-' expected but ')' found.
for (int j=0 ; j!=k ; j+1){
                         ^Program:11: error: illegal start of simple expression
	}
        ^